--- a/Lab2/Resourses.qrc
+++ b/Lab2/Resourses.qrc
@@ -6,5 +6,6 @@
         <file>Resourses/ex2_b.png</file>
         <file>Resourses/ex2_c.png</file>
         <file>Resourses/ex2_d.png</file>
+        <file>Resourses/ex_3.png</file>
     </qresource>
 </RCC>
