--- a/Lab2/mainwindow.ui
+++ b/Lab2/mainwindow.ui
@@ -583,22 +583,6 @@ hr { height: 1px; border-width: 0; }
       </property>
       <layout class="QVBoxLayout" name="ex1View_2">
        <item>
-        <widget class="QLabel" name="label_12">
-         <property name="layoutDirection">
-          <enum>Qt::LeftToRight</enum>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="Resourses.qrc">:/ex1/Resourses/ex1.png</pixmap>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item>
         <widget class="QTextBrowser" name="textBrowser_3">
          <property name="html">
           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
@@ -606,7 +590,7 @@ hr { height: 1px; border-width: 0; }
 p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Times New Roman';&quot;&gt;Нахождение вероятности безотказной работы заданной схемы~ (или отказа схемы), используя алгебраические операции над событиями и теоремы сложения и умножения вероятностей.&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Times New Roman','serif';&quot;&gt;В тире имеются 5 различных по точности боя винтовок. Вероятности попадания в мишень для данного стрелка соответственно равны 0,5; 0,55; 0,7; 0,75 и 0,4. Чему равна вероятность попадания в мишень, если стрелок делает один выстрел из случайно выбранной винтовки?&lt;/span&gt; &lt;/p&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Times New Roman';&quot;&gt;Формула для вычисления:&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;justify&quot; style=&quot;-qt-paragraph-type:empty; margin-top:2px; margin-bottom:2px; margin-left:-9px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -618,7 +602,7 @@ hr { height: 1px; border-width: 0; }
           <string/>
          </property>
          <property name="pixmap">
-          <pixmap resource="Resourses.qrc">:/ex1/Resourses/formul_ex1.png</pixmap>
+          <pixmap resource="Resourses.qrc">:/ex1/Resourses/ex_3.png</pixmap>
          </property>
         </widget>
        </item>
@@ -642,8 +626,8 @@ hr { height: 1px; border-width: 0; }
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
           <layout class="QGridLayout" name="gridLayout_3">
-           <item row="2" column="1">
-            <widget class="QDoubleSpinBox" name="inpt3_3">
+           <item row="1" column="1">
+            <widget class="QDoubleSpinBox" name="inpt2_3">
              <property name="decimals">
               <number>3</number>
              </property>
@@ -655,16 +639,10 @@ hr { height: 1px; border-width: 0; }
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QDoubleSpinBox" name="inpt1_3">
-             <property name="decimals">
-              <number>3</number>
-             </property>
-             <property name="maximum">
-              <double>1.000000000000000</double>
-             </property>
-             <property name="singleStep">
-              <double>0.001000000000000</double>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_23">
+             <property name="text">
+              <string>P(A1)</string>
              </property>
             </widget>
            </item>
@@ -675,41 +653,8 @@ hr { height: 1px; border-width: 0; }
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
-            <widget class="QLabel" name="label_20">
-             <property name="text">
-              <string>P(A5)</string>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="1">
-            <widget class="QDoubleSpinBox" name="inpt5_2">
-             <property name="decimals">
-              <number>3</number>
-             </property>
-             <property name="maximum">
-              <double>1.000000000000000</double>
-             </property>
-             <property name="singleStep">
-              <double>0.001000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="1">
-            <widget class="QDoubleSpinBox" name="inpt4_3">
-             <property name="decimals">
-              <number>3</number>
-             </property>
-             <property name="maximum">
-              <double>1.000000000000000</double>
-             </property>
-             <property name="singleStep">
-              <double>0.001000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QDoubleSpinBox" name="inpt2_3">
+           <item row="0" column="1">
+            <widget class="QDoubleSpinBox" name="inpt1_3">
              <property name="decimals">
               <number>3</number>
              </property>
@@ -728,6 +673,32 @@ hr { height: 1px; border-width: 0; }
              </property>
             </widget>
            </item>
+           <item row="3" column="1">
+            <widget class="QDoubleSpinBox" name="inpt4_3">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="maximum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.001000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QDoubleSpinBox" name="inpt5_2">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="maximum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.001000000000000</double>
+             </property>
+            </widget>
+           </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_22">
              <property name="text">
@@ -735,22 +706,15 @@ hr { height: 1px; border-width: 0; }
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_23">
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_20">
              <property name="text">
-              <string>P(A1)</string>
+              <string>P(A5)</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="0">
-            <widget class="QLabel" name="label_24">
-             <property name="text">
-              <string>P(A6)</string>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="1">
-            <widget class="QDoubleSpinBox" name="inpt6_2">
+           <item row="2" column="1">
+            <widget class="QDoubleSpinBox" name="inpt3_3">
              <property name="decimals">
               <number>3</number>
              </property>
